manifests/authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: security
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: cilium-gateway-internal
      namespace: kube-system
      sectionName: https-lex-la
    - name: cloudflare-tunnel
      namespace: cloudflare-tunnel-system
  hostnames:
    - authelia.lex.la
  rules:
    - backendRefs:
        - name: authelia
          port: 80
